--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,13 +1,23 @@
-<div class="prose">
-  <h1>Create new event</h1>
+<h1>Create new event</h1>
 
-  <%= form_with model: @event, url: events_path, method: :post, local: true do |form| %>
-    <%= form.label :title, "Title", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
-    <%= form.text_field :title, required: true, class: "mb-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
-    <%= form.label :description, "Description", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
-    <%= form.text_area :description, required: true, size: "30x10", class: "mb-4 block w-full rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:py-1.5 sm:text-sm sm:leading-6" %>
-    <%= form.label :date_time, "Date & Time", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
-    <%= form.datetime_local_field :date_time, required: true, class: "mb-4 block w-full rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:py-1.5 sm:text-sm sm:leading-6" %>
-    <%= form.submit "Create event", class: "bg-red-500 no-underline transition-all text-center px-4 py-1 mt-4 rounded-lg text-white border-2 border-red-500 cursor-pointer hover:bg-white hover:text-red-500" %>
-  <% end %>
-</div>
+<%= form_with model: @event, url: events_path, method: :post, local: true do |form| %>
+  <%= form.label :title, "Title", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
+  <%= form.text_field :title, class: "mb-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+
+  <%= form.label :description, "Description", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
+  <%= form.text_area :description, size: "40x4", class: "mb-4 block w-full rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:py-1.5 sm:text-sm sm:leading-6" %>
+
+  <%= form.label :location, "Location", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
+  <%= form.text_field :location, class: "mb-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+
+  <%= form.label :date, "Date", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
+  <%= form.text_field :date, min: @today, class: "mb-4 block w-full rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:py-1.5 sm:text-sm sm:leading-6" %>
+
+  <%= form.label :time, "Time", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
+  <%= form.text_field :time, class: "mb-4 block w-full rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:py-1.5 sm:text-sm sm:leading-6" %>
+
+  <%= form.label :image, "Cover Photo (URL)", class: " mb-2 block text-sm font-medium leading-6 text-gray-900" %>
+  <%= form.text_field :image, class: "mb-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+
+  <%= form.submit "Create event", class: "bg-red-500 no-underline transition-all text-center px-4 py-1 mt-4 rounded-lg text-white border-2 border-red-500 cursor-pointer hover:bg-white hover:text-red-500" %>
+<% end %>
